  * Run shutdown cleanup actions even if there were failures processing
    the command. Amoung other fixes, this means that addurl will stage
    added files even if adding one of the urls fails.
  * bittorrent: Fix locking problem when using addurl file://
  * Windows: Fix local rsync filepath munging (fixes 26 test suite failures).
  * Windows: Got the rsync special remote working.

 -- Joey Hess <id@joeyh.name>  Mon, 22 Dec 2014 15:16:38 -0400

git-annex (5.20141219) unstable; urgency=medium

  * Webapp: When adding a new box.com remote, use the new style chunking.
    Thanks, Jon Ander Peñalba.
  * External special remote protocol now includes commands for setting
    and getting the urls associated with a key.
  * Urls can now be claimed by remotes. This will allow creating,
    for example, a external special remote that handles magnet: and
    *.torrent urls.
  * Use wget -q --show-progress for less verbose wget output,
    when built with wget 1.16.
  * Added bittorrent special remote.
  * addurl behavior change: When downloading an url ending in .torrent,
    it will download files from bittorrent, instead of the old behavior
    of adding the torrent file to the repository.
  * Added Recommends on aria2.
  * When possible, build with the haskell torrent library for parsing
    torrent files. As a fallback, can instead use btshowmetainfo from
    bittornado | bittorrent.
  * Fix build with -f-S3.

 -- Joey Hess <id@joeyh.name>  Fri, 19 Dec 2014 16:53:26 -0400

git-annex (5.20141203) unstable; urgency=medium

  * proxy: New command for direct mode repositories, allows bypassing
    the direct mode guard in a safe way to do all sorts of things
    including git revert, git mv, git checkout ...
  * undo: New command to undo the most recent change to a file
    or to the contents of a directory.
  * Add undo action to nautilus and konqueror integration.
  * diffdriver: New git-annex command, to make git external diff drivers
    work with annexed files.